--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>Vite App</title>
 	</head>
 	<body>
+		<script src="/index.js"></script>
+
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
