adding font to html and tailwind correctly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		/>
 		<title>Vite App</title>
 	</head>
-	<body>
+	<body class="font-rubik">
 		<script src="/index.js"></script>
 
 		<script type="module" src="/main.js"></script>
