making the card overall structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 		<title>Vite App</title>
 	</head>
 	<body class="font-rubik">
+		<div class="container py-5 flex flex-col">
+			<div class="bg-white mx-auto w-11/12 h-52 rounded">
+				<div class="flex"></div>
+				<div></div>
+				<div class="flex"></div>
+			</div>
+		</div>
 		<script src="/index.js"></script>
 
 		<script type="module" src="/main.js"></script>
