the comment user Detail and time Detail Done

--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
 	</head>
 	<body class="font-rubik">
 		<div class="container py-5 flex flex-col">
-			<div class="bg-white mx-auto w-11/12 h-52 rounded">
-				<div class="flex"></div>
+			<div class="bg-white mx-auto w-11/12 h-56 rounded">
+				<div
+					class="flex items-center justify-around pr-20 mt-3 text-gray-500"
+				>
+					<img
+						class="w-9 h-9"
+						src="./images/avatars/image-amyrobson.webp"
+						alt="amyrobson"
+					/>
+					<span class="font-bold text-gray-900">amyrobson</span>
+					<span class="text-sm">1 month ago</span>
+				</div>
 				<div></div>
 				<div class="flex"></div>
 			</div>
