making the while cart ok

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="font-rubik">
 		<div class="container py-5 flex flex-col">
-			<div class="bg-white mx-auto w-11/12 h-56 rounded">
+			<div class="bg-white mx-auto w-11/12 h-60 rounded">
 				<div
 					class="flex items-center justify-around pr-20 mt-3 text-gray-500"
 				>
@@ -26,8 +26,36 @@
 					<span class="font-bold text-gray-900">amyrobson</span>
 					<span class="text-sm">1 month ago</span>
 				</div>
-				<div></div>
-				<div class="flex"></div>
+				<p class="px-5 mt-3 text-gray-500">
+					Impressive!Though it seems the drag feature could be
+					improved. But overall it looks incredible. You've nailed the
+					design and responsiveness at various breakpoints works
+					really well.
+				</p>
+				<div class="flex justify-between px-5 mt-2 items-center">
+					<div
+						class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
+					>
+						<img
+							src="./images/icon-plus.svg"
+							class="cursor-pointer"
+							alt=""
+						/>
+						<span class="text-purple-700 font-bold">12</span>
+						<img
+							class="cursor-pointer"
+							src="./images/icon-minus.svg"
+							alt=""
+						/>
+					</div>
+					<div class="text-purple-700 cursor-pointer">
+						<img
+							src="./images/icon-reply.svg"
+							class="w-4 mr-1 inline-block align-middle"
+							alt="reply"
+						/><span class="inline-block font-bold">Reply</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="/index.js"></script>
