--- a/index.html
+++ b/index.html
@@ -1,65 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
-		<title>Vite App</title>
-	</head>
-	<body class="font-rubik">
-		<div class="container py-5 flex flex-col">
-			<div class="bg-white mx-auto w-11/12 h-60 rounded">
-				<div
-					class="flex items-center justify-around pr-20 mt-3 text-gray-500"
-				>
-					<img
-						class="w-9 h-9"
-						src="./images/avatars/image-amyrobson.webp"
-						alt="amyrobson"
-					/>
-					<span class="font-bold text-gray-900">amyrobson</span>
-					<span class="text-sm">1 month ago</span>
-				</div>
-				<p class="px-5 mt-3 text-gray-500">
-					Impressive!Though it seems the drag feature could be
-					improved. But overall it looks incredible. You've nailed the
-					design and responsiveness at various breakpoints works
-					really well.
-				</p>
-				<div class="flex justify-between px-5 mt-2 items-center">
-					<div
-						class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
-					>
-						<img
-							src="./images/icon-plus.svg"
-							class="cursor-pointer"
-							alt=""
-						/>
-						<span class="text-purple-700 font-bold">12</span>
-						<img
-							class="cursor-pointer"
-							src="./images/icon-minus.svg"
-							alt=""
-						/>
-					</div>
-					<div class="text-purple-700 cursor-pointer">
-						<img
-							src="./images/icon-reply.svg"
-							class="w-4 mr-1 inline-block align-middle"
-							alt="reply"
-						/><span class="inline-block font-bold">Reply</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script src="/index.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Vite App</title>
+  </head>
+  <body class="font-rubik">
+    <div class="container py-5 flex flex-col">
+      <div class="bg-white mx-auto w-11/12 h-60 rounded">
+        <div class="flex items-center justify-around pr-20 mt-3 text-gray-500">
+          <img
+            class="w-9 h-9"
+            src="./images/avatars/image-amyrobson.webp"
+            alt="amyrobson"
+          />
+          <span class="font-bold text-gray-900">amyrobson</span>
+          <span class="text-sm">1 month ago</span>
+        </div>
+        <p class="px-5 mt-3 text-gray-500">
+          Impressive!Though it seems the drag feature could be improved. But
+          overall it looks incredible. You've nailed the design and
+          responsiveness at various breakpoints works really well.
+        </p>
+        <div class="flex justify-between px-5 mt-2 items-center">
+          <div
+            class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
+          >
+            <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
+            <span class="text-purple-700 font-bold">12</span>
+            <img class="cursor-pointer" src="./images/icon-minus.svg" alt="" />
+          </div>
+          <div class="text-purple-700 cursor-pointer">
+            <img
+              src="./images/icon-reply.svg"
+              class="w-4 mr-1 inline-block align-middle"
+              alt="reply"
+            /><span class="inline-block font-bold">Reply</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/index.js"></script>
 
-		<script type="module" src="/main.js"></script>
-	</body>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
