--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div
           class="flex flex-col comments-container border-l-2 border-gray-300 pl-5 mt-5"
         >
-          <div class="bg-white ml-2 h-64 rounded">
+          <div class="bg-white ml-2 h-64 mb-2 rounded">
             <div
               class="flex items-center justify-around pr-20 mt-3 text-gray-500"
             >
@@ -105,7 +105,9 @@
                 src="./images/avatars/image-amyrobson.webp"
                 alt="amyrobson"
               />
+
               <span class="font-bold text-gray-900">amyrobson</span>
+
               <span class="text-sm">1 month ago</span>
             </div>
             <p class="px-5 mt-3 text-gray-500">
@@ -135,6 +137,59 @@
                   class="w-4 mr-1 inline-block align-middle"
                   alt="reply"
                 /><span class="inline-block font-bold">Reply</span>
+              </div>
+            </div>
+          </div>
+          <div class="bg-white ml-2 my-2 h-64 rounded">
+            <div
+              class="flex items-center justify-around pr-14 mt-3 text-gray-500"
+            >
+              <img
+                class="w-9 h-9"
+                src="./images/avatars/image-amyrobson.webp"
+                alt="amyrobson"
+              />
+              <span class="font-bold text-gray-900">amyrobson</span>
+              <span
+                class="text-white bg-purple-700 class rounded text-sm px-1 font-light"
+                >You</span
+              >
+              <span class="text-sm">1 month ago</span>
+            </div>
+            <p class="px-5 mt-3 text-gray-500">
+              Impressive!Though it seems the drag feature could be improved. But
+              overall it looks incredible. You've nailed the design and
+              responsiveness at various breakpoints works really well.
+            </p>
+            <div class="flex justify-between px-5 mt-2 items-center">
+              <div
+                class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
+              >
+                <img
+                  src="./images/icon-plus.svg"
+                  class="cursor-pointer"
+                  alt=""
+                />
+                <span class="text-purple-700 font-bold">12</span>
+                <img
+                  class="cursor-pointer"
+                  src="./images/icon-minus.svg"
+                  alt=""
+                />
+              </div>
+              <div class="flex flex-1 justify-evenly">
+                <div class="flex items-center cursor-pointer">
+                  <img
+                    class="mx-2"
+                    src="./images/icon-delete.svg"
+                    alt="delete"
+                  />
+                  <span class="text-red-600">Delete</span>
+                </div>
+                <div class="flex items-center cursor-pointer">
+                  <img class="mx-2" src="./images/icon-edit.svg" alt="edit" />
+                  <span class="text-purple-600">Edit</span>
+                </div>
               </div>
             </div>
           </div>
