adding add comment section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,24 @@
           </div>
         </div>
       </div>
+      <div class="bg-white py-4 mx-auto rounded flex flex-col w-11/12">
+        <textarea
+          placeholder="Add a Comment"
+          name="Add a Comment"
+          class="rounded border-2 w-11/12 mx-auto border-r-gray-400 resize-none outline-none"
+          id=""
+          cols="30"
+          rows="5"
+        ></textarea>
+        <div class="flex items-center mt-6 justify-between px-2">
+          <img class="w-10" src="./images/avatars/image-juliusomo.png" alt="" />
+          <button
+            class="text-white bg-purple-700 rounded px-2 py-0 text-sm h-10"
+          >
+            Send
+          </button>
+        </div>
+      </div>
     </div>
     <script src="/index.js"></script>
 
