--- a/index.html
+++ b/index.html
@@ -195,23 +195,45 @@
           </div>
         </div>
       </div>
-      <div class="bg-white py-4 mx-auto rounded flex flex-col w-11/12">
+      <div class="bg-white py-4 mx-auto rounded flex flex-col w-11/12 mt-5">
         <textarea
           placeholder="Add a Comment"
           name="Add a Comment"
-          class="rounded border-2 w-11/12 mx-auto border-r-gray-400 resize-none outline-none"
+          class="rounded border-2 w-11/12 mx-auto border-r-gray-400 resize-none outline-none px-2 focus:border-gray-600 py-2"
           id=""
           cols="30"
           rows="5"
         ></textarea>
-        <div class="flex items-center mt-6 justify-between px-2">
-          <img class="w-10" src="./images/avatars/image-juliusomo.png" alt="" />
+        <div
+          class="flex items-center mt-6 justify-between px-2 w-11/12 mx-auto"
+        >
+          <img
+            class="w-9"
+            src="./images/avatars/image-juliusomo.png"
+            alt="account owner image"
+          />
           <button
-            class="text-white bg-purple-700 rounded px-2 py-0 text-sm h-10"
+            class="text-white bg-purple-700 rounded px-4 py-2 text-sm h-10 font-bold"
           >
             Send
           </button>
         </div>
+      </div>
+    </div>
+    <div
+      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup p-4 hidden"
+    >
+      <h2 class="text-xl font-bold">Delete Comment</h2>
+      <p class="text-gray-400 text-sm mt-2">
+        Are you sure you want to delete this comment? This will remove the
+        comment and can't be undone.
+      </p>
+      <div class="flex justify-between">
+        <button class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded">
+          NO, CANCEL</button
+        ><button class="text-white bg-red-600 p-2 mt-2 cursor-pointer rounded">
+          YES, DELETE
+        </button>
       </div>
     </div>
     <script src="/index.js"></script>
