reply box for mobile created

--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@
       </div>
     </div>
     <div
+      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded reply-popup p-4"
+    >
+      <h2 class="text-xl font-bold">Reply</h2>
+      <textarea
+        class="w-full h-20 border-gray-200 focus:border-gray-400 outline-none rounded px-4 py-2 border-2 resize-none my-3 hidden md:hidden"
+        placeholder="Reply Text"
+      ></textarea>
+      <div class="flex justify-between">
+        <button class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded">
+          CANCEL</button
+        ><button
+          class="text-white bg-purple-600 p-2 mt-2 cursor-pointer rounded"
+        >
+          Reply
+        </button>
+      </div>
+    </div>
+    <div
       class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup p-4 hidden"
     >
       <h2 class="text-xl font-bold">Delete Comment</h2>
