--- a/index.html
+++ b/index.html
@@ -14,121 +14,46 @@
   </head>
   <body class="font-rubik">
     <div class="container py-5 mx-auto flex flex-col">
-      <div class="flex flex-col mx-auto w-11/12 my-2">
-        <div
-          class="bg-white flex flex-col justify-evenly h-60 md:h-40 rounded px-5 max-w-3xl"
-        >
-          <div class="flex items-center pr-20 mt-3 text-gray-500">
-            <img
-              class="w-9 h-9"
-              src="./images/avatars/image-amyrobson.webp"
-              alt="amyrobson"
-            />
-            <span class="font-bold text-gray-900 flex-1 text-center"
-              >amyrobson</span
-            >
-            <span class="text-sm">1 month ago</span>
-            <div class="text-purple-700 cursor-pointer">
-              <img
-                src="./images/icon-reply.svg"
-                class="w-4 mr-1 inline-block align-middle"
-                alt="reply"
-              /><span class="inline-block font-bold">Reply</span>
-            </div>
-          </div>
-          <p class="mt-3 text-gray-500">
-            Impressive!Though it seems the drag feature could be improved. But
-            overall it looks incredible. You've nailed the design and
-            responsiveness at various breakpoints works really well.
-          </p>
-          <div class="flex justify-between mt-2 md:hidden items-center">
-            <div
-              class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
-            >
-              <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
-              <span class="text-purple-700 font-bold">12</span>
-              <img
-                class="cursor-pointer"
-                src="./images/icon-minus.svg"
-                alt=""
-              />
-            </div>
-            <div class="text-purple-700 cursor-pointer">
-              <img
-                src="./images/icon-reply.svg"
-                class="w-4 mr-1 inline-block align-middle"
-                alt="reply"
-              /><span class="inline-block font-bold">Reply</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="flex flex-col mx-auto w-11/12 my-2">
-        <div
-          class="bg-white h-60 rounded flex px-5 flex-col justify-evenly max-w-3xl md:h-40"
-        >
-          <div class="flex items-center pr-20 mt-3 text-gray-500">
-            <img
-              class="w-9 h-9"
-              src="./images/avatars/image-amyrobson.webp"
-              alt="amyrobson"
-            />
-            <span class="font-bold text-gray-900 flex-1 text-center"
-              >amyrobson</span
-            >
-            <span class="text-sm">1 month ago</span>
-          </div>
-          <p class="mt-3 text-gray-500">
-            Impressive!Though it seems the drag feature could be improved. But
-            overall it looks incredible. You've nailed the design and
-            responsiveness at various breakpoints works really well.
-          </p>
-          <div class="flex justify-between mt-2 md:hidden items-center">
-            <div
-              class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
-            >
-              <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
-              <span class="text-purple-700 font-bold">12</span>
-              <img
-                class="cursor-pointer"
-                src="./images/icon-minus.svg"
-                alt=""
-              />
-            </div>
-            <div class="text-purple-700 cursor-pointer">
-              <img
-                src="./images/icon-reply.svg"
-                class="w-4 mr-1 inline-block align-middle"
-                alt="reply"
-              /><span class="inline-block font-bold">Reply</span>
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex flex-col comments-container border-l-2 border-gray-300 pl-5 mt-5"
-        >
+      <!-- first post -->
+
+      <div class="flex flex-col max-w-3xl mx-auto w-11/12 my-2">
+        <div class="flex items-center bg-white rounded">
           <div
-            class="bg-white px-5 flex flex-col justify-evenly ml-2 h-64 mb-2 rounded"
+            class="bg-purple-50 w-20 h-20 ml-2 rounded hidden md:flex flex-col items-center justify-between"
           >
-            <div class="flex items-center pr-20 mt-3 text-gray-500">
+            <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
+            <span class="text-purple-700 font-bold">12</span>
+            <img class="cursor-pointer" src="./images/icon-minus.svg" alt="" />
+          </div>
+          <div
+            class="bg-white flex flex-col justify-evenly h-60 md:h-40 rounded px-5 max-w-3xl"
+          >
+            <div class="flex items-center pr-20 md:pr-0 mt-3 text-gray-500">
               <img
-                class="w-9 h-9"
+                class="w-9 h-9 mr-2"
                 src="./images/avatars/image-amyrobson.webp"
                 alt="amyrobson"
               />
-
-              <span class="font-bold text-gray-900 flex-1 text-center"
+              <span class="font-bold mr-2 text-gray-900 text-center"
                 >amyrobson</span
               >
-
               <span class="text-sm">1 month ago</span>
+              <div
+                class="text-purple-700 cursor-pointer flex-1 text-right hidden md:block"
+              >
+                <img
+                  src="./images/icon-reply.svg"
+                  class="w-4 mr-1 inline-block align-middle"
+                  alt="reply"
+                /><span class="inline-block font-bold">Reply</span>
+              </div>
             </div>
-            <p class="mt-3 text-gray-500">
+            <p class="mt-3 text-gray-500 md:mt-0">
               Impressive!Though it seems the drag feature could be improved. But
               overall it looks incredible. You've nailed the design and
               responsiveness at various breakpoints works really well.
             </p>
-            <div class="flex justify-between mt-2 items-center">
+            <div class="flex justify-between mt-2 md:hidden items-center">
               <div
                 class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
               >
@@ -153,30 +78,47 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- second post -->
+      <div class="flex flex-col max-w-3xl mx-auto w-11/12 my-2">
+        <div class="flex items-center bg-white rounded">
           <div
-            class="bg-white ml-2 my-2 px-5 flex flex-col justify-evenly h-64 rounded"
+            class="bg-purple-50 w-20 h-20 ml-2 rounded hidden md:flex flex-col items-center justify-between"
           >
-            <div class="flex items-center pr-14 mt-3 text-gray-500">
+            <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
+            <span class="text-purple-700 font-bold">12</span>
+            <img class="cursor-pointer" src="./images/icon-minus.svg" alt="" />
+          </div>
+          <div
+            class="bg-white h-60 rounded flex px-5 flex-col justify-evenly max-w-3xl md:h-40"
+          >
+            <div class="flex items-center pr-20 md:pr-0 mt-3 text-gray-500">
               <img
-                class="w-9 h-9"
+                class="w-9 h-9 mr-2"
                 src="./images/avatars/image-amyrobson.webp"
                 alt="amyrobson"
               />
-              <span class="font-bold text-gray-900 flex-1 text-center"
+              <span class="font-bold mr-2 text-gray-900 text-center"
                 >amyrobson</span
               >
-              <span
-                class="text-white bg-purple-700 class rounded text-sm px-1 font-light"
-                >You</span
-              >
               <span class="text-sm">1 month ago</span>
+              <div
+                class="text-purple-700 cursor-pointer flex-1 text-right hidden md:block"
+              >
+                <img
+                  src="./images/icon-reply.svg"
+                  class="w-4 mr-1 inline-block align-middle"
+                  alt="reply"
+                /><span class="inline-block font-bold">Reply</span>
+              </div>
             </div>
-            <p class="mt-3 text-gray-500">
+            <p class="mt-3 text-gray-500 md:mt-0">
               Impressive!Though it seems the drag feature could be improved. But
               overall it looks incredible. You've nailed the design and
               responsiveness at various breakpoints works really well.
             </p>
-            <div class="flex justify-between mt-2 items-center">
+            <div class="flex justify-between mt-2 md:hidden items-center">
               <div
                 class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
               >
@@ -192,8 +134,120 @@
                   alt=""
                 />
               </div>
-              <div class="flex flex-1 justify-evenly">
-                <div class="flex items-center cursor-pointer">
+              <div class="text-purple-700 cursor-pointer">
+                <img
+                  src="./images/icon-reply.svg"
+                  class="w-4 mr-1 inline-block align-middle"
+                  alt="reply"
+                /><span class="inline-block font-bold">Reply</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex flex-col comments-container border-l-2 border-gray-300 pl-5 mt-5"
+        >
+          <div class="flex bg-white my-2 items-center">
+            <div
+              class="bg-purple-50 w-20 h-20 ml-2 rounded hidden md:flex flex-col items-center justify-between"
+            >
+              <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
+              <span class="text-purple-700 font-bold">12</span>
+              <img
+                class="cursor-pointer"
+                src="./images/icon-minus.svg"
+                alt=""
+              />
+            </div>
+            <div
+              class="bg-white px-5 flex flex-col justify-evenly ml-2 md:ml-0 h-64 mb-2 rounded md:h-40"
+            >
+              <div class="flex items-center pr-20 md:pr-0 mt-3 text-gray-500">
+                <img
+                  class="w-9 h-9 mr-2"
+                  src="./images/avatars/image-amyrobson.webp"
+                  alt="amyrobson"
+                />
+
+                <span class="font-bold text-gray-900 mr-2 text-center"
+                  >amyrobson</span
+                >
+
+                <span class="text-sm">1 month ago</span>
+                <div
+                  class="text-purple-700 cursor-pointer flex-1 text-right hidden md:block"
+                >
+                  <img
+                    src="./images/icon-reply.svg"
+                    class="w-4 mr-1 inline-block align-middle"
+                    alt="reply"
+                  /><span class="inline-block font-bold">Reply</span>
+                </div>
+              </div>
+              <p class="mt-3 text-gray-500 md:mt-0">
+                Impressive!Though it seems the drag feature could be improved.
+                But overall it looks incredible. You've nailed the design and
+                responsiveness at various breakpoints works really well.
+              </p>
+              <div class="flex justify-between mt-2 items-center md:hidden">
+                <div
+                  class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
+                >
+                  <img
+                    src="./images/icon-plus.svg"
+                    class="cursor-pointer"
+                    alt=""
+                  />
+                  <span class="text-purple-700 font-bold">12</span>
+                  <img
+                    class="cursor-pointer"
+                    src="./images/icon-minus.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="text-purple-700 cursor-pointer">
+                  <img
+                    src="./images/icon-reply.svg"
+                    class="w-4 mr-1 inline-block align-middle"
+                    alt="reply"
+                  /><span class="inline-block font-bold">Reply</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex items-center my-2 bg-white">
+            <div
+              class="bg-purple-50 w-20 h-20 ml-2 rounded hidden md:flex flex-col items-center justify-between"
+            >
+              <img src="./images/icon-plus.svg" class="cursor-pointer" alt="" />
+              <span class="text-purple-700 font-bold">12</span>
+              <img
+                class="cursor-pointer"
+                src="./images/icon-minus.svg"
+                alt=""
+              />
+            </div>
+            <div
+              class="bg-white ml-2 md:ml-0 my-2 px-5 flex flex-col justify-evenly h-64 rounded md:h-40"
+            >
+              <div class="flex items-center md:pr-0 pr-14 mt-3 text-gray-500">
+                <img
+                  class="w-9 h-9 mr-2"
+                  src="./images/avatars/image-amyrobson.webp"
+                  alt="amyrobson"
+                />
+                <span class="font-bold text-gray-900 text-center mr-2"
+                  >amyrobson</span
+                >
+                <span
+                  class="text-white bg-purple-700 mr-2 class rounded text-sm px-1 font-light"
+                  >You</span
+                >
+                <span class="text-sm">1 month ago</span>
+
+                <div
+                  class="text-purple-700 mx-2 cursor-pointer flex-1 justify-center hidden md:flex items-center"
+                >
                   <img
                     class="mx-2"
                     src="./images/icon-delete.svg"
@@ -201,16 +255,56 @@
                   />
                   <span class="text-red-600">Delete</span>
                 </div>
-                <div class="flex items-center cursor-pointer">
+                <div
+                  class="text-purple-700 cursor-pointer flex-1 justify-center hidden md:inline-flex items-center mx-2"
+                >
                   <img class="mx-2" src="./images/icon-edit.svg" alt="edit" />
                   <span class="text-purple-600">Edit</span>
+                </div>
+              </div>
+              <p class="mt-3 text-gray-500 md:mt-0">
+                Impressive!Though it seems the drag feature could be improved.
+                But overall it looks incredible. You've nailed the design and
+                responsiveness at various breakpoints works really well.
+              </p>
+              <div class="flex justify-between mt-2 items-center md:hidden">
+                <div
+                  class="bg-purple-50 w-20 h-9 rounded flex items-center justify-evenly"
+                >
+                  <img
+                    src="./images/icon-plus.svg"
+                    class="cursor-pointer"
+                    alt=""
+                  />
+                  <span class="text-purple-700 font-bold">12</span>
+                  <img
+                    class="cursor-pointer"
+                    src="./images/icon-minus.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="flex flex-1 justify-evenly">
+                  <div class="flex items-center cursor-pointer">
+                    <img
+                      class="mx-2"
+                      src="./images/icon-delete.svg"
+                      alt="delete"
+                    />
+                    <span class="text-red-600">Delete</span>
+                  </div>
+                  <div class="flex items-center cursor-pointer">
+                    <img class="mx-2" src="./images/icon-edit.svg" alt="edit" />
+                    <span class="text-purple-600">Edit</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="bg-white py-4 mx-auto rounded flex flex-col w-11/12 mt-5">
+      <div
+        class="bg-white py-4 mx-auto rounded flex flex-col w-11/12 mt-5 max-w-3xl"
+      >
         <textarea
           placeholder="Add a Comment"
           name="Add a Comment"
