--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
               <span class="font-bold mr-2 text-gray-900 text-center"
                 >amyrobson</span
               >
+              <span
+                class="text-white bg-purple-700 mr-2 class rounded text-sm px-1 font-light"
+                >You</span
+              >
               <span class="text-sm">1 month ago</span>
               <div
-                class="text-purple-700 cursor-pointer flex-1 text-right hidden md:block"
+                class="text-purple-700 mx-2 cursor-pointer flex-1 justify-center hidden md:flex items-center"
               >
-                <img
-                  src="./images/icon-reply.svg"
-                  class="w-4 mr-1 inline-block align-middle"
-                  alt="reply"
-                /><span class="inline-block font-bold">Reply</span>
+                <img class="mx-2" src="./images/icon-delete.svg" alt="delete" />
+                <span class="text-red-600">Delete</span>
+              </div>
+              <div
+                class="text-purple-700 cursor-pointer flex-1 justify-center hidden md:inline-flex items-center mx-2"
+              >
+                <img class="mx-2" src="./images/icon-edit.svg" alt="edit" />
+                <span class="text-purple-600">Edit</span>
               </div>
             </div>
             <p class="mt-3 text-gray-500 md:mt-0">
