actions added to user post

--- a/index.html
+++ b/index.html
@@ -76,12 +76,19 @@
                   alt=""
                 />
               </div>
-              <div class="text-purple-700 cursor-pointer">
-                <img
-                  src="./images/icon-reply.svg"
-                  class="w-4 mr-1 inline-block align-middle"
-                  alt="reply"
-                /><span class="inline-block font-bold">Reply</span>
+              <div class="flex flex-1 justify-evenly">
+                <div class="flex items-center cursor-pointer">
+                  <img
+                    class="mx-2"
+                    src="./images/icon-delete.svg"
+                    alt="delete"
+                  />
+                  <span class="text-red-600">Delete</span>
+                </div>
+                <div class="flex items-center cursor-pointer">
+                  <img class="mx-2" src="./images/icon-edit.svg" alt="edit" />
+                  <span class="text-purple-600">Edit</span>
+                </div>
               </div>
             </div>
           </div>
