patching data when reply content changes

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         placeholder="Reply Text"
       ></textarea>
       <div class="flex justify-between">
-        <button class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded">
+        <button
+          class="text-white bg-gray-600 cancel p-2 mt-2 cursor-pointer rounded"
+        >
           CANCEL</button
         ><button
-          class="text-white bg-purple-600 p-2 mt-2 cursor-pointer rounded"
+          class="text-white bg-purple-600 p-2 mt-2 send-edit cursor-pointer rounded"
         >
           Reply
         </button>
