making it modulat

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </button>
       </div>
     </div>
-    <script src="/index.js"></script>
-
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/init.js"></script>
+    <script type="module" src="/comment.js"></script>
+    <script type="module" src="/reply.js"></script>
   </body>
 </html>
