one time reply box

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div
-      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded reply-popup p-4 md:w-5/12 md:h-64 hidden"
+      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-56 shadow-md bg-white rounded reply-popup p-4 md:w-5/12 md:h-64 hidden"
     >
       <h2 class="text-xl font-bold">Reply</h2>
       <textarea
