--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </button>
       </div>
     </div>
-    <script type="module" defer="true" src="/init.js"></script>
-    <script type="module" defer="true" src="/comment.js"></script>
-    <script type="module" defer="true" src="/reply.js"></script>
+    <script type="module" defer="true" src="./js/init.js"></script>
+    <script type="module" defer="true" src="./js/comment.js"></script>
+    <script type="module" defer="true" src="./js/reply.js"></script>
   </body>
 </html>
