--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
         </button>
       </div>
     </div>
-    <script type="module" defer="true" src="./js/init.js"></script>
+    <script type="module" defer="true" src="./init.js"></script>
   </body>
 </html>
