--- a/index.html
+++ b/index.html
@@ -41,59 +41,65 @@
         </div>
       </div>
     </div>
-    <div
-      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 md:w-6/12 hidden h-44 bg-white rounded p-4 edit-reply-box"
-    >
-      <textarea
-        class="w-full h-20 border-gray-200 focus:border-gray-400 outline-none rounded px-4 py-2 border-2 resize-none my-3"
-        placeholder="Reply Text"
-      ></textarea>
-      <div class="flex justify-between">
-        <button
-          class="text-white bg-gray-600 cancel p-2 mt-2 cursor-pointer rounded"
-        >
-          CANCEL</button
-        ><button
-          class="text-white bg-purple-600 p-2 mt-2 send-edit cursor-pointer rounded"
-        >
-          Reply
-        </button>
+    <div class="modal-container fixed w-screen h-screen left-0 top-0 hidden">
+      <div
+        class="fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 md:w-6/12 hidden h-44 bg-white rounded p-4 edit-reply-box"
+      >
+        <textarea
+          class="w-full h-20 border-gray-200 focus:border-gray-400 outline-none rounded px-4 py-2 border-2 resize-none my-3"
+          placeholder="Reply Text"
+        ></textarea>
+        <div class="flex justify-between">
+          <button
+            class="text-white bg-gray-600 cancel p-2 mt-2 cursor-pointer rounded"
+          >
+            CANCEL</button
+          ><button
+            class="text-white bg-purple-600 p-2 mt-2 send-edit cursor-pointer rounded"
+          >
+            Reply
+          </button>
+        </div>
       </div>
-    </div>
-    <div
-      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-56 shadow-md bg-white rounded reply-popup p-4 md:w-5/12 md:h-64 hidden"
-    >
-      <h2 class="text-xl font-bold">Reply</h2>
-      <textarea
-        class="w-full h-20 border-gray-200 focus:border-gray-400 outline-none rounded px-4 py-2 border-2 resize-none my-3"
-        placeholder="Reply Text"
-      ></textarea>
-      <div class="flex justify-between">
-        <button
-          class="text-white bg-gray-600 p-2 mt-2 cancel-button cursor-pointer rounded"
-        >
-          CANCEL</button
-        ><button
-          class="text-white reply-button bg-purple-600 p-2 mt-2 cursor-pointer rounded"
-        >
-          Reply
-        </button>
+      <div
+        class="fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-56 shadow-md bg-white rounded reply-popup p-4 md:w-5/12 md:h-64 hidden"
+      >
+        <h2 class="text-xl font-bold">Reply</h2>
+        <textarea
+          class="w-full h-20 border-gray-200 focus:border-gray-400 outline-none rounded px-4 py-2 border-2 resize-none my-3"
+          placeholder="Reply Text"
+        ></textarea>
+        <div class="flex justify-between">
+          <button
+            class="text-white bg-gray-600 p-2 mt-2 cancel-button cursor-pointer rounded"
+          >
+            CANCEL</button
+          ><button
+            class="text-white reply-button bg-purple-600 p-2 mt-2 cursor-pointer rounded"
+          >
+            Reply
+          </button>
+        </div>
       </div>
-    </div>
-    <div
-      class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup p-4 hidden"
-    >
-      <h2 class="text-xl font-bold">Delete Comment</h2>
-      <p class="text-gray-400 text-sm mt-2">
-        Are you sure you want to delete this comment? This will remove the
-        comment and can't be undone.
-      </p>
-      <div class="flex justify-between">
-        <button class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded">
-          NO, CANCEL</button
-        ><button class="text-white bg-red-600 p-2 mt-2 cursor-pointer rounded">
-          YES, DELETE
-        </button>
+      <div
+        class="fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup p-4 hidden"
+      >
+        <h2 class="text-xl font-bold">Delete Comment</h2>
+        <p class="text-gray-400 text-sm mt-2">
+          Are you sure you want to delete this comment? This will remove the
+          comment and can't be undone.
+        </p>
+        <div class="flex justify-between">
+          <button
+            class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded"
+          >
+            NO, CANCEL</button
+          ><button
+            class="text-white bg-red-600 p-2 mt-2 cursor-pointer rounded"
+          >
+            YES, DELETE
+          </button>
+        </div>
       </div>
     </div>
     <script type="module" defer="true" src="./init.js"></script>
