--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div
-        class="fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup p-4 hidden"
+        class="fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 w-72 h-44 bg-white rounded popup-delete popup p-4 hidden"
       >
         <h2 class="text-xl font-bold">Delete Comment</h2>
         <p class="text-gray-400 text-sm mt-2">
@@ -91,11 +91,11 @@
         </p>
         <div class="flex justify-between">
           <button
-            class="text-white bg-gray-600 p-2 mt-2 cursor-pointer rounded"
+            class="text-white cancel bg-gray-600 p-2 mt-2 cursor-pointer rounded"
           >
             NO, CANCEL</button
           ><button
-            class="text-white bg-red-600 p-2 mt-2 cursor-pointer rounded"
+            class="text-white delete bg-red-600 p-2 mt-2 cursor-pointer rounded"
           >
             YES, DELETE
           </button>
