--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./dist/output.css" />
-    <link href="./modules/comment.js" rel="script" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -104,6 +103,6 @@
         </div>
       </div>
     </div>
-    <script type="module" defer="true" src="./modules/init"></script>
+    <script type="module" defer="true" src="./modules/init.js"></script>
   </body>
 </html>
