testing adding new comment and delete the comment

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           >
             NO, CANCEL</button
           ><button
-            class="text-white delete bg-red-600 p-2 mt-2 cursor-pointer rounded"
+            class="text-white test-delete delete bg-red-600 p-2 mt-2 cursor-pointer rounded"
           >
             YES, DELETE
           </button>
